PR2-WTFA-2: updating the header and stories

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/stories.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/stories.scss
@@ -8,6 +8,7 @@
     }
     .h5{
         margin-bottom: 3rem;
+        font-family: 'Reckless Neue Book';
     }
 
     @include media-breakpoint-up(sm){
