--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/header.scss
@@ -100,7 +100,7 @@
                         text-wrap: nowrap;
 
                         @include media-breakpoint-down(lg) {
-                            padding: 1.5rem;
+                            padding-block: 1.5rem;
                             border-bottom: 1px solid $neutral-100;
                         }
 
@@ -111,11 +111,15 @@
                             &:hover {
                                 background-color: $neutral-100;
                             }
+                            span{
+                                font-size: 16px;
+                            }
+                            
                         }
                     }
 
                     .dropdown {
-
+                    
                         .nav-link {
                             display: flex;
                             justify-content: space-between;
@@ -135,12 +139,11 @@
                         &-menu {
                             border: none;
                             width: 254px;
-                            padding: 1rem;
-                            gap: 0.75rem;
+                            padding-inline: 2rem;
 
                             .nav-item {
-                                padding-bottom: 0.75rem;
-
+                                // padding-bottom: 0.75rem;
+                                padding-block: 0.625rem;
                                 @include media-breakpoint-down(md) {
                                     border-bottom: none;
                                 }
