--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
@@ -41,9 +41,10 @@
                         padding-bottom: 20px;
                     }
 
-                    h5 {
+                    .h5 {
                         flex-grow: 1; 
-                        margin-bottom: 20px; 
+                        margin-bottom: 20px;
+                        font-family: 'Reckless Neue Book';
                     }
                 }
 
@@ -60,7 +61,6 @@
         .swiper-navigation {
             display: flex;
             gap: 10px;
-            // position: absolute;
             bottom: 0px; 
             justify-content: flex-end;
             right: 10%; 
@@ -99,9 +99,6 @@
 
     @include media-breakpoint-up(md){
         padding: 10rem 8rem;
-        // #{$this}__item {
-        //     max-width: 1100px;
-        // }
         #{$this}__logo{
             margin-right: 1.875rem;
         }
