dev : history width fixed

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/history.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/history.scss
@@ -10,7 +10,7 @@
     padding-left: 1.75rem;
     flex-direction: column;
     .container{
-        // width: 80%;
+        max-width: 100%;
        
         .history-swiper{
             display: flex;
