dev: final refinements

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/404.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/404.scss
@@ -18,6 +18,9 @@
             position: relative;
             z-index: 2;
             text-align: center;
+            h2{
+                font-family: 'Reckless Neue Book';
+            }
             .btn-primary{
                 width: 295px;
                 
