--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/footer.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/components/footer.scss
@@ -3,8 +3,13 @@
     $self: ".footer";
 
     padding-block: 2rem;
+    
+    @include media-breakpoint-up(sm){
+        padding: 5rem;
+    }
 
-    @media screen and (min-width: 1000px) {
+
+    @include media-breakpoint-up(md){
         padding-inline: 5rem;
     }
 
@@ -33,7 +38,7 @@
                 flex-direction: column;
                 gap: 2.5rem;
 
-                @media screen and (min-width: 700px) {
+                @include media-breakpoint-up(sm){
                     grid-column: 2 / 3;
                     padding-bottom: 0;
                     border-bottom: none;
@@ -41,7 +46,7 @@
                     border-left: 1px solid $neutral-100;
                 }
 
-                @media screen and (min-width: 1000px) {
+                @include media-breakpoint-up(md) {
                     grid-column: 5 / 9;
                 }
 
@@ -63,7 +68,7 @@
                 padding-bottom: 2.5rem;
                 border-bottom: 1px solid $neutral-100;
 
-                @media screen and (min-width: 700px) {
+                @include media-breakpoint-up(sm) {
                     grid-column: 3 / -1;
                     padding-bottom: 0;
                     border-bottom: none;
@@ -71,7 +76,7 @@
                     border-left: 1px solid $neutral-100;
                 }
 
-                @media screen and (min-width: 1000px) {
+                @include media-breakpoint-up(md){
                     grid-column: 9 / -1;
                 }
 
@@ -92,13 +97,13 @@
                                 background-color: $neutral-100;
                             }
 
-                            @media screen and (min-width: 720px) {
+                            @include media-breakpoint-up(sm) {
                                 font-size: 26px;
                                 line-height: 145%;
                                 letter-spacing: 0;
                             }
 
-                            @media screen and (min-width: 1024px) {
+                            @include media-breakpoint-up(md) {
                                 font-size: 28px;
                                 line-height: 155%;
                                 letter-spacing: 0;
@@ -120,7 +125,7 @@
                     width: 100%;
                 }
 
-                @media screen and (min-width: 700px) {
+                @include media-breakpoint-up(sm) {
 
                     #{$self}__logo {
                         width: 150px;
@@ -129,7 +134,7 @@
                     grid-row-start: 1;
                 }
 
-                @media screen and (min-width: 1000px) {
+                @include media-breakpoint-up(md) {
                     grid-column: 1 / 5;
 
                     #{$self}__logo {
