--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/testimonials.scss
@@ -1,7 +1,8 @@
 @import '../custom.scss';
 
 .testimonials {
-    padding: 20px;
+    padding-inline: 1.75rem;
+    padding-block: 5rem;
     $this: '.testimonials';
     
     display: flex;
