--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/capabilities.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/capabilities.scss
@@ -6,12 +6,17 @@
 
     padding: 3rem 1.75rem;
 
+    &__image-container {
+        width: 100vw;
+        height: 280px;
+    }
+
     .h2 {
         margin-bottom: clamp(5.5rem, 10vw, 7rem);
     }
     
     @include media-breakpoint-up(sm) {
-        padding: 5rem;
+        padding: 3rem 5rem 5rem 5rem;
 
         .text-section-title {
 
