temp3 : contacts naming and fonts fixed

--- a/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/capabilities.scss
+++ b/wp-content/themes/outside-traineeship-boilerplate/resources/styles/styles/capabilities.scss
@@ -16,7 +16,7 @@
     }
     
     @include media-breakpoint-up(sm) {
-        padding: 3rem 5rem 5rem 5rem;
+        padding: 5rem;
 
         .text-section-title {
 
